--- a/web-tsu2/about.html
+++ b/web-tsu2/about.html
@@ -54,16 +54,14 @@
 		</div>
 		<div class="nav_list">
 			<div class="in">
-				<a href="index.html">首页</a>
-				<a class="active" href="about.html">关于我们</a>
-				<a href="teachers.html">师资力量</a>
-				<a href="news.html">新闻中心</a>
-				<a href="undergraduate.html">本科教学</a>
-				<a href="school.html">校园生活</a>
-				<a href="practice.html">社会实践</a>
-				<a href="abort.html">国际合作</a>
-				<a href="recruit.html">招生信息</a>
-				<a href="development.html">职业发展</a>
+				<div class="in">
+					<a class="active" href="index.html">首页</a>
+					<a href="project.html">教学项目</a>
+					<a href="apply.html">申报指南</a>
+					<a href="about.html">关于我们</a>
+					<a href="practice.html">项目活动</a>
+					<a href="development.html">职业发展</a>
+				</div>
 				<form class="search-inp" action="">
 					<input type="text" value="" />
 					<i class="close f-ifont">&#xe643;</i>
@@ -75,14 +73,13 @@
 	</nav>
 	<!-- 顶部banner -->
 	<div class="ty-banner">
-		<img class="banner-img" src="./images/new/banner-bk.png" alt="">
-		<div class="container-2">
+		<img class="banner-img" src="./images/new/bac-4.png" alt="">
+		<div class="">
 			<h2>关于我们</h2>
 		</div>
 		<div class="nav-list">
 			<span data-to="ty-dean">院长致辞</span>
 			<span data-to="ty-products">项目介绍</span>
-			<span data-to="ty-general">通识教育</span>
 			<span data-to="ty-training">培养理念</span>
 			<span data-to="ty-connect">联系我们</span>
 		</div>
@@ -99,89 +96,39 @@
 
 		<div class="dean-say fr">
 			<h3 class="ty-title">院长致辞</h3>
-			<p>我热情地欢迎2017年全国各省文、理科高中毕业生报考清华大学经济管理学院。多年来，清华经管学院一直是高考中各省最优秀考生的首选。在每年秋季学期，我为新生讲授《经济学原理》课程，亲身体验到清华经管学院本科生的优秀。
+			<p>我热情地欢迎来自清华各院系的优秀同学来清华经管学院攻读经济学本科第二学位或管理学本科第二学位。经管学院于2006 年开设经济学本科第二学位，于2013 年恢复开设管理学本科第二学位；于2015
+				年分别在这两个项目下开设了金融方向和创新创业领导力方向。2017 年，管理学本科第二学位开设财务分析与控制方向；2018年，该项目下又新开设了商务数据科学方向。</p>
+			<p>清华经管学院本科第二学位为全校各院系本科同学提供经济学和管理学基础知识，增强学院之间的交流和认同，让学有余力的同学接触更丰富的知识、更广阔的平台。经管学院本科第二学位着重培养学生的学科交叉能力和批判思维，帮助同学们成为优秀的复合型人才。
 			</p>
-			<p>
-				近年来，清华经管学院大力度地改革本科教育的理念与实践。学院提出了培养每一位学生成为有良好素养的现代文明人，同时创造一种环境使得杰出人才能够脱颖而出的本科教育理念，并在此基础上建立了“通识教育与个性发展相结合”的国际化本科教育体系。清华经管学院本科教育改革获得2014年国家级教学成果一等奖，在国内外获得认可和好评。
-			</p>
-			<p>我有幸成为“文革”后恢复高考时清华大学首届（1977级）本科生。清华使我有机会在八十年代初就出国留学，为我日后的发展打下了坚实的根基。在清华结识的同学们，是我一生中的良师益友。希望你们也选择清华，选择清华经管学院。
-			</p>
+			<p>白重恩欢迎同学们选择经管本科第二学位项目，与我们一起感受经管文化，塑造多彩人生。</p>
+			<hr />
 			<img class="write-img" src="./images/new/name.png" alt="">
+			<span class="write-time">二〇一九年三月二十日</span>
 		</div>
 	</div>
 
 	<!-- 项目介绍 -->
 	<div class="ty-products">
-		<div class="ty-products-in">
-			<h3 class="ty-title"><i class="prev-icon"></i>项目介绍<i class="next-icon"></i></h3>
-			<div class="ty-products-con swiper-container">
-				<div class="products-list swiper-wrapper">
-					<div class="product swiper-slide">
-						<h4>通识教育，个性发展</h4>
-						<p>清华经管学院引进海内外知名学者执教讲堂，现任院长钱颖一教授等一批知名学者为学生授课。学院绝大多数教师拥有在国外学习、研究的经历和企业实践经验。</p>
-						<a class="ty-more" href="">查看详情<em>></em></a>
-					</div>
-					<div class="product swiper-slide">
-						<h4>通识教育，个性发展</h4>
-						<p>
-							清华经管学院引进海内外知名学者执教讲堂，现任院长钱颖一教授等一批知名学者为学生授课。学院绝大多数教师拥有在国外学习、研究的经历和企业实践经验。在招生方面，近几年经管学院招收的文、理科生比例均衡，一半学生是各省高考前十名。
-						</p>
-						<a class="ty-more" href="">查看详情<em>></em></a>
-					</div>
-					<div class="product swiper-slide">
-						<h4>通识教育，个性发展</h4>
-						<p>
-							清华经管学院引进海内外知名学者执教讲堂，现任院长钱颖一教授等一批知名学者为学生授课。学院绝大多数教师拥有在国外学习、研究的经历和企业实践经验。在招生方面，近几年经管学院招收的文、理科生比例均衡，一半学生是各省高考前十名。在招生方面，近几年经管学院招收的文、理科生比例均衡，一半学生是各省高考前十名。
-						</p>
-						<a class="ty-more" href="">查看详情<em>></em></a>
-					</div>
-					<div class="product swiper-slide">
-						<h4>通识教育，个qqq性发展</h4>
-						<p>
-							清华经管学院引进海内外知名学者执教讲堂，现任院长钱颖一教授等一批知名学者为学生授课。学院绝大多数教师拥有在国外学习、研究的经历和企业实践经验。在招生方面，近几年经管学院招收的文、理科生比例均衡，一半学生是各省高考前十名。在招生方面，近几年经管学院招收的文、理科生比例均衡，一半学生是各省高考前十名。
-						</p>
-						<a class="ty-more" href="">查看详情<em>></em></a>
-					</div>
-					<div class="product swiper-slide">
-						<h4>通识教育，eee个性发展</h4>
-						<p>
-							清华经管学院引进海内外知名学者执教讲堂，现任院长钱颖一教授等一批知名学者为学生授课。学院绝大多数教师拥有在国外学习、研究的经历和企业实践经验。在招生方面，近几年经管学院招收的文、理科生比例均衡，一半学生是各省高考前十名。在招生方面，近几年经管学院招收的文、理科生比例均衡，一半学生是各省高考前十名。
-						</p>
-						<a class="ty-more" href="">查看详情<em>></em></a>
-					</div>
-				</div>
-				<div class="ty-bolls"></div>
-				<!-- <div class="ty-bolls"><span></span><span class="swiper-pagination-bullet-active"></span> </div> -->
-			</div>
-		</div>
-	</div>
-
-	<!-- 通识教育 -->
-	<div class="ty-general">
-		<h3 class="ty-title">通识教育</h3>
-		<div class="in">
-			<div class="img"><img src="./images/new/bk-banner.png" alt=""></div>
-			<p>通识教育是融合价值塑造、能力培养、知识获取的“三位一体”的教育，特别强调对学生的好奇心、想象力、批判性思维能力的培养；个性发展既关注学生个性的发展，又对学生实行个性化的培养，为学生自由成长创造环境和提供机会。<a
-					class="ty-more-2" href="">查看更多</a></p>
-		</div>
+		<h3 class="ty-title">项目介绍</h3>
+		<p>为了适应中国经济发展急需高素质、复合型管理人才的宏观需求，顺应清华大学迈向世界一流综合性大学过程中经管学科与其他学科融合的趋势，继承清华大学培养具有领导与管理能力的工程师的传统，2006年，清华经管学院设立了经济学本科第二学位项目，2013年，管理学本科第二学位恢复招生。2015年，管理学本科第二学位开设了创新创业领导力方向，经济学本科第二学位开设了金融方向。2017年及2018年，管理学本科第二学位相继开设了财务分析与控制方向、商务数据科学方向。2006年以来，清华经管学院已培养了2689名本科第二学位毕业生，为国家和社会培养了大量优秀的复合型人才。
+		</p>
 	</div>
 
 	<!-- 培养理念 -->
 	<div class="ty-training">
-		<!-- <img src="./images/new/ll.png" alt=""> -->
 		<div class="in">
 			<h3 class="ty-title">培养理念</h3>
-			<p>
-				清华大学经济管理学院（以下简称“清华经管学院”）成立于1984年。朱镕基担任首任院长（1984-2001）。现任院长是海内外著名经济学家白重恩教授。清华经管学院集经济学科、管理学科为一体，是我国培养经济类、管理类精英人才的摇篮。经过三十多年的快速发展，现今的清华经管学院，不但是清华大学最大的学院之一，更是中国乃至亚洲地区最优秀的经济管理学院之一。
-			</p>
-			<p>年4月，清华经管学院提出了“通识教育与个性发展相结合”的本科教育理念，并从2009年秋季学期开始实施新本科培养方案。这一改革获得2014年国家级教学成果一等奖。</p>
-			<a class="ty-more-3" href="">查看更多</a>
+			<div class="text">
+				<p>通过对非经济管理专业的学生进行接近于经济管理本专业本科生的系统而严格的培养，为将来从事本专业与经济、管理有关的工作、或者其他与经济、管理相关的职业奠定基础。</p>
+				<p>在课程体系设计中，为第二学位学生单独开设必修课，选修课比例高于必修课，给学生充分选择的机会。2015年增设创新创业领导力方向和金融方向，2017年及2018年管理学第二学位相继开设了财务分析与控制方向、商务数据科学方向，学院为学生提供了培养方案和新增的课程安排。课程的设置适应企业和社会大环境的变化和要求，使学生在本专业学习的同时，了解企业社会运作的规律和方法，为就业后相关领域的各种决策提供知识储备。
+				</p>
+			</div>
 		</div>
 	</div>
 
 	<!-- 联系我们 -->
 	<div class="ty-connect">
-		<img src="images/new/xy.png" alt="">
+		<img src="images/new/about-3.png" alt="">
 
 		<div class="in">
 			<h3 class="ty-title">联系我们</h3>
@@ -192,7 +139,7 @@
 				网址：http://www.sem.tsinghua.edu.cn<br />
 				微博：http://weibo.com/semjxb
 			</p>
-			<a class="ty-more-2" href="">欢迎垂询清华经管学院本科招生咨询办公室。</a>
+			<a class="ty-more" href="">欢迎垂询</a>
 		</div>
 	</div>
 
@@ -226,51 +173,6 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="./js/swiper.min.js"></script>
 	<script src="js/app.js"></script>
-	<script>
-		if (document.body.clientWidth >= 1024) {
-			var swiperProducts = new Swiper('.ty-products-con', {
-				slidesPerView: 'auto',
-				pagination: {
-					el: '.ty-bolls',
-					clickable: true,
-				},
-				grabCursor: true,
-				speed: 1000,
-				paginationClickable: true,
-				autoplay: {
-					delay: 3000
-				},
-				navigation: {
-					nextEl: '.ty-products-in .next-icon',
-					prevEl: '.ty-products-in .prev-icon',
-				}
-			});
-		} else {
-			var swiperProducts = new Swiper('.ty-products-con', {
-				slidesPerView: 'auto',
-				pagination: {
-					el: '.ty-bolls',
-					clickable: true,
-				},
-				grabCursor: true,
-				speed: 1000,
-				paginationClickable: true,
-				autoplay: {
-					delay: 3000
-				},
-				navigation: {
-					nextEl: '.ty-products-in .next-icon',
-					prevEl: '.ty-products-in .prev-icon',
-				}
-			});
-		}
-
-		$(".ty-products-con").mouseenter(function () {
-			swiperProducts.autoplay.stop();
-		}).mouseleave(function () {
-			swiperProducts.autoplay.start();
-		});
-	</script>
 </body>
 
 </html>
