--- a/web-tsu2/newsDetial.html
+++ b/web-tsu2/newsDetial.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="address=no">
 	<title>清华经管学院</title>
@@ -53,16 +54,14 @@
 		</div>
 		<div class="nav_list">
 			<div class="in">
-				<a href="index.html">首页</a>
-				<a href="about.html">关于我们</a>
-				<a href="teachers.html">师资力量</a>
-				<a href="news.html">新闻中心</a>
-				<a href="undergraduate.html">本科教学</a>
-				<a href="school.html">校园生活</a>
-				<a href="practice.html">社会实践</a>
-				<a href="abort.html">国际合作</a>
-				<a href="recruit.html">招生信息</a>
-				<a href="development.html">职业发展</a>
+				<div class="in">
+					<a class="active" href="index.html">首页</a>
+					<a href="project.html">教学项目</a>
+					<a href="apply.html">申报指南</a>
+					<a href="about.html">关于我们</a>
+					<a href="practice.html">项目活动</a>
+					<a href="development.html">职业发展</a>
+				</div>
 				<form class="search-inp" action="">
 					<input type="text" value="" />
 					<i class="close f-ifont">&#xe643;</i>
@@ -74,8 +73,8 @@
 	</nav>
 	<!-- 顶部banner -->
 	<div class="ty-banner news news-detail">
-		<div class="container-2">
-			<h2 class="pc">新闻中心</h2>
+		<div class="">
+			<h2 style="background: url(./images/aecond-top-bac2.png);">新闻中心</h2>
 			<p class="ty-crumbs">当前位置：<a href="">新闻中心</a><a href="">图片新闻</a></p>
 		</div>
 	</div>
@@ -98,19 +97,19 @@
 			<p>
 				杨斌在致辞中首先代表学校向国际学生学者致以节日的问候和新年的祝福。他表示，目前清华大学有来自128个国家的3700多名国际学生和近300位国际学者，多元文化背景的师生，是“清华人”这一共同身份让我们相聚今晚。近年来，清华大学积极推动实施全球战略，在海外设立了多个实体平台，让清华成为中国与世界对话的桥梁，共同面对全球挑战。与此同时，清华也在苦练内功，全面实施“国际化能力提升计划”，努力为包括国际学生学者在内的全体师生创造更加国际化的校园环境，推动中外学生学者深度融合。他代表清华大学向国际学生学者表示衷心的感谢，并祝愿他们可以在清华园开阔视野、收获友谊与知识，在教育教学、学术科研与交流合作中开创新的里程碑。
 			</p>
-			<img src="./images/new/abort-item.png" alt="">
+			<img src="./images/new/dev-1.png" alt="">
 			<span class="img-detial">致辞</span>
 			<p>
 				晚会上，25位学生获得2018年“国际学生工作奖”。杨斌，校长助理、教务处处长彭刚，国际处处长郦金梁、学生工作部部长白本锋、保卫处处长李志华、武装部部长熊剑平、新闻中心常务副主任覃川和校医院党委书记郭建丽为他们颁发了获奖证书，表彰他们在2018年国际学生工作中的突出表现和在中外文化交流融合中所作出的贡献。
 			</p>
-			<img src="./images/new/abort-item.png" alt="">
+			<img src="./images/new/dev-1.png" alt="">
 			<span class="img-detial">颁奖嘉宾与获奖学生合影</span>
 			<p>
 				晚会上，25位学生获得2018年“国际学生工作奖”。杨斌，校长助理、教务处处长彭刚，国际处处长郦金梁、学生工作部部长白本锋、保卫处处长李志华、武装部部长熊剑平、新闻中心常务副主任覃川和校医院党委书记郭建丽为他们颁发了获奖证书，表彰他们在2018年国际学生工作中的突出表现和在中外文化交流融合中所作出的贡献。
 			</p>
-			<img src="./images/new/abort-item.png" alt="">
+			<img src="./images/new/dev-1.png" alt="">
 			<span class="img-detial">颁奖嘉宾与获奖学生合影</span>
-			<img src="./images/new/abort-item.png" alt="">
+			<img src="./images/new/dev-1.png" alt="">
 			<span class="img-detial">颁奖嘉宾与获奖学生合影</span>
 			<p>
 				晚会上，25位学生获得2018年“国际学生工作奖”。杨斌，校长助理、教务处处长彭刚，国际处处长郦金梁、学生工作部部长白本锋、保卫处处长李志华、武装部部长熊剑平、新闻中心常务副主任覃川和校医院党委书记郭建丽为他们颁发了获奖证书，表彰他们在2018年国际学生工作中的突出表现和在中外文化交流融合中所作出的贡献。
@@ -139,7 +138,8 @@
 				<div class="line_bottom"></div>
 				<p class="fl">版权所有：清华大学经济管理学院</p>
 				<p class="fr"><a href="javascript:;">网站地图&nbsp;&nbsp;</a>/<a
-						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
+						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a
+						href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
 			</div>
 		</div>
 	</footer>
