--- a/web-tsu2/newsList2.html
+++ b/web-tsu2/newsList2.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="address=no">
 	<title>清华经管学院</title>
@@ -53,16 +54,14 @@
 		</div>
 		<div class="nav_list">
 			<div class="in">
-				<a href="index.html">首页</a>
-				<a href="about.html">关于我们</a>
-				<a href="teachers.html">师资力量</a>
-				<a href="news.html">新闻中心</a>
-				<a href="undergraduate.html">本科教学</a>
-				<a href="school.html">校园生活</a>
-				<a href="practice.html">社会实践</a>
-				<a href="abort.html">国际合作</a>
-				<a href="recruit.html">招生信息</a>
-				<a href="development.html">职业发展</a>
+				<div class="in">
+					<a class="active" href="index.html">首页</a>
+					<a href="project.html">教学项目</a>
+					<a href="apply.html">申报指南</a>
+					<a href="about.html">关于我们</a>
+					<a href="practice.html">项目活动</a>
+					<a href="development.html">职业发展</a>
+				</div>
 				<form class="search-inp" action="">
 					<input type="text" value="" />
 					<i class="close f-ifont">&#xe643;</i>
@@ -74,8 +73,8 @@
 	</nav>
 	<!-- 顶部banner -->
 	<div class="ty-banner news">
-		<div class="container-2">
-			<h2>新闻中心</h2>
+		<div class="">
+			<h2 style="background: url(./images/aecond-top-bac2.png);">新闻中心</h2>
 			<p class="ty-crumbs">当前位置：<a href="">新闻中心</a><a href="">图片新闻</a></p>
 		</div>
 	</div>
@@ -174,7 +173,8 @@
 				<div class="line_bottom"></div>
 				<p class="fl">版权所有：清华大学经济管理学院</p>
 				<p class="fr"><a href="javascript:;">网站地图&nbsp;&nbsp;</a>/<a
-						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
+						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a
+						href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
 			</div>
 		</div>
 	</footer>
