--- a/web-tsu2/practice.html
+++ b/web-tsu2/practice.html
@@ -2,18 +2,18 @@
 <html lang="zh">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="format-detection" content="address=no">
-	<title>清华经管学院</title>
-	<link rel="stylesheet" href="styles/styles.css">
-	<link rel="stylesheet" href="./styles/swiper.min.css">
-	<script src="js/fn.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="address=no">
+  <title>清华经管学院</title>
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="./styles/swiper.min.css">
+  <script src="js/fn.js"></script>
 </head>
 
 <body>
-	<!-- 头部 -->
+  <!-- 头部 -->
   <header>
     <div class="header_top">
       <div class="container clearfix">
@@ -43,156 +43,164 @@
   </header>
   <!-- 导航栏 -->
   <nav class="nav">
-		<div class="nav-top container clearfix">
-			<div class="brand">
-				<a href="index.html"><img class="l" src="./images/logo-1.png" alt=""></a>
-				<a href="index.html"><img class="m" src="./images/logo-2.png" alt=""></a>
-				<a href="index.html"><img class="r" src="./images/logo-3.png" alt=""></a>
-			</div>
-			<i class="f-ifont menu for-mobile">&#xe600;</i>
-		</div>
-		<div class="nav_list">
-			<div class="in">
-				<a href="index.html">首页</a>
-				<a href="about.html">关于我们</a>
-				<a href="teachers.html">师资力量</a>
-				<a href="news.html">新闻中心</a>
-				<a href="undergraduate.html">本科教学</a>
-				<a href="school.html">校园生活</a>
-				<a href="practice.html">社会实践</a>
-				<a href="abort.html">国际合作</a>
-				<a href="recruit.html">招生信息</a>
-				<a href="development.html">职业发展</a>
-				<form class="search-inp" action="">
-					<input type="text" value="" />
-					<i class="close f-ifont">&#xe643;</i>
-					<i class="search f-ifont">&#xe656;</i>
+    <div class="nav-top container clearfix">
+      <div class="brand">
+        <a href="index.html"><img class="l" src="./images/logo-1.png" alt=""></a>
+        <a href="index.html"><img class="m" src="./images/logo-2.png" alt=""></a>
+        <a href="index.html"><img class="r" src="./images/logo-3.png" alt=""></a>
+      </div>
+      <i class="f-ifont menu for-mobile">&#xe600;</i>
+    </div>
+    <div class="nav_list">
+      <div class="in">
+        <div class="in">
+          <a class="active" href="index.html">首页</a>
+          <a href="project.html">教学项目</a>
+          <a href="apply.html">申报指南</a>
+          <a href="about.html">关于我们</a>
+          <a href="practice.html">项目活动</a>
+          <a href="development.html">职业发展</a>
+        </div>
+        <form class="search-inp" action="">
+          <input type="text" value="" />
+          <i class="close f-ifont">&#xe643;</i>
+          <i class="search f-ifont">&#xe656;</i>
         </form>
         <i class="f-ifont close for-mobile">&#xe62b;</i>
-			</div>
-		</div>
-	</nav>
+      </div>
+    </div>
+  </nav>
   <!-- 顶部banner -->
   <div class="ty-banner">
     <img class="banner-img" src="./images/new/bac-5.png" alt="">
-    <div class="container-2">
-        <h2>项目活动</h2>
+    <div class="">
+      <h2>项目活动</h2>
     </div>
     <div class="nav-list"></div>
   </div>
 
   <!-- 列表1 -->
   <section class="newList container ty-practice">
-		<a href="" class="newText clearfix fl">
+    <a href="" class="newText clearfix fl">
       <div class="img"><img src="./images/new/activity-1.png" alt=""></div>
-			<div class="left fl">
-				<span class="month">JUN</span>
-				<span class="day">19</span>
-				<span class="l_new">新闻动态</span>
-			</div>
-			<p class="p1 two_cut">煮雪共话、静待春浓——经管学院首届班主任、辅导员新春酒会举行</p>
-			<p class="p2 three_cut">中英文双语国际新生学费交费系统是为国际学生（包括国际本科生、国际研究生和非学位项目学生）提供的中英线上学费交费系统，具备信息化、网络化、数字化的特征，可以较好解决国际学生学费无法在线支付问题，</p>
-		</a>
-		<a href="" class="newText clearfix fl">
+      <div class="left fl">
+        <span class="month">JUN</span>
+        <span class="day">19</span>
+      </div>
+      <p class="p1 two_cut">煮雪共话、静待春浓——经管学院首届班主任、辅导员新春酒会举行</p>
+      <p class="p2">中英文双语国际新生学费交费系统是为国际学生（包括国际本科生、国际研究生和非学位项目学生）提供的中英线上学费交费系统，具备信息化、网络化、数字化的特征，可以较好解决国际学生学费无法在线支付问题，</p>
+    </a>
+    <a href="" class="newText clearfix fl">
       <div class="img"><img src="./images/new/activity-1.png" alt=""></div>
-			<div class="left fl">
-				<span class="month">JUN</span>
-				<span class="day">30</span>
-				<span class="l_new">新闻动态</span>
-			</div>
-			<p class="p1 two_cut">白重恩院长与本科生共品下午茶</p>
-			<p class="p2 three_cut">来自两岸76所高校的大学生运动员代表和体育爱好者代表近千人汇聚清华园，共同见证以“ 更亲、更近、更强”为主题口号的海峡两岸（ 北京）体育交流运动会隆重开幕。国台办副主任龙明彪</p>
-		</a>
-		<a href="" class="newText clearfix fl">
+      <div class="left fl">
+        <span class="month">JUN</span>
+        <span class="day">30</span>
+      </div>
+      <p class="p1 two_cut">白重恩院长与本科生共品下午茶</p>
+      <p class="p2">来自两岸76所高校的大学生运动员代表和体育爱好者代表近千人汇聚清华园，共同见证以“ 更亲、更近、更强”为主题口号的海峡两岸（ 北京）体育交流运动会隆重开幕。国台办副主任龙明彪</p>
+    </a>
+    <a href="" class="newText clearfix fl">
       <div class="img"><img src="./images/new/activity-1.png" alt=""></div>
-			<div class="left fl">
-				<span class="month">JUN</span>
-				<span class="day">07</span>
-				<span class="l_new">新闻动态</span>
-			</div>
-			<p class="p1 two_cut">2018年度“清华经管学院陈小悦奖学金”颁奖仪式举行</p>
-			<p class="p2 three_cut">2018年11月30日，2018年度“清华经管学院陈小悦奖学金”颁奖仪式举行。6位本科生和4位研究生获得本年度奖学金。</p>
-		</a>
+      <div class="left fl">
+        <span class="month">JUN</span>
+        <span class="day">07</span>
+      </div>
+      <p class="p1 two_cut">2018年度“清华经管学院陈小悦奖学金”颁奖仪式举行</p>
+      <p class="p2">2018年11月30日，2018年度“清华经管学院陈小悦奖学金”颁奖仪式举行。6位本科生和4位研究生获得本年度奖学金。</p>
+    </a>
   </section>
-  
+
   <!-- 列表2 -->
-	<section class="ty-new-list">
+  <section class="ty-new-list">
     <div class="list clearfix">
       <a href="">
         <span class="time">MAY<br /><strong>16</strong></span>
         <div class="detial">
           <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
+          <p>
+            学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+          </p>
         </div>
       </a>
       <a href="">
         <span class="time">MAY<br /><strong>16</strong></span>
         <div class="detial">
           <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
+          <p>
+            学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+          </p>
         </div>
       </a>
       <a href="">
         <span class="time">MAY<br /><strong>16</strong></span>
         <div class="detial">
           <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
+          <p>
+            学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+          </p>
         </div>
       </a>
       <a href="">
         <span class="time">MAY<br /><strong>16</strong></span>
         <div class="detial">
           <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
+          <p>
+            学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+          </p>
         </div>
       </a>
       <a href="">
         <span class="time">MAY<br /><strong>16</strong></span>
         <div class="detial">
           <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
+          <p>
+            学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+          </p>
         </div>
       </a>
       <a href="">
         <span class="time">MAY<br /><strong>16</strong></span>
         <div class="detial">
           <h3>清华经管学院2018级本科生校友导师聘任仪式举行</h3>
-          <p>学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。</p>
+          <p>
+            学院逐步建立以提升学生职业发展能力为目标，以职业引导及生涯辅导为手段的全方位职业发展教育服务体系。本年度在就业率和契合率持续提升基础上，重点布局改善就业结构和提升就业质量。各相关部门凝心聚力，共同推动了学院就业工作再上新台阶。
+          </p>
         </div>
       </a>
     </div>
-    <a class="ty-more-3" href="newsList.html">查看更多</a>
+    <a class="ty-more" href="newsList2.html">查看更多</a>
   </section>
-  
-  
-	<!-- 底部 -->
-	<footer>
-		<div class="container">
-			<div class="footer_top">
-				<div class="fl top_left">
-					<a href="javascript:;"><img src="./images/brand.png" alt=""></a>
-					<p>地址：北京市海淀区清华大学经济管理学院伟伦楼116 邮编：100084</p>
-					<p>Email：ugadmit@sem.tsinghua.edu.cn</p>
-				</div>
-				<div class="fr top_right">
-					<a class="f-ifont" href="javascript:;">&#xe65d;
-						<div class="socialwraper"><i><em></em></i><img src="./images/weixinma.png"></div>
-					</a>
-					<a class="f-ifont" href="javascript:;">&#xe882;</a>
-				</div>
 
-			</div>
-			<div class="footer_botttom">
-				<div class="line_bottom"></div>
-				<p class="fl">版权所有：清华大学经济管理学院</p>
-				<p class="fr"><a href="javascript:;">网站地图&nbsp;&nbsp;</a>/<a href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a
-					 href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
-			</div>
-		</div>
-	</footer>
 
-	<script src="js/jquery.min.js"></script>
-	<script src="./js/swiper.min.js"></script>
-	<script src="js/app.js"></script>
+  <!-- 底部 -->
+  <footer>
+    <div class="container">
+      <div class="footer_top">
+        <div class="fl top_left">
+          <a href="javascript:;"><img src="./images/brand.png" alt=""></a>
+          <p>地址：北京市海淀区清华大学经济管理学院伟伦楼116 邮编：100084</p>
+          <p>Email：ugadmit@sem.tsinghua.edu.cn</p>
+        </div>
+        <div class="fr top_right">
+          <a class="f-ifont" href="javascript:;">&#xe65d;
+            <div class="socialwraper"><i><em></em></i><img src="./images/weixinma.png"></div>
+          </a>
+          <a class="f-ifont" href="javascript:;">&#xe882;</a>
+        </div>
+
+      </div>
+      <div class="footer_botttom">
+        <div class="line_bottom"></div>
+        <p class="fl">版权所有：清华大学经济管理学院</p>
+        <p class="fr"><a href="javascript:;">网站地图&nbsp;&nbsp;</a>/<a
+            href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="js/jquery.min.js"></script>
+  <script src="./js/swiper.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
+
 </html>
