--- a/web-tsu2/project.html
+++ b/web-tsu2/project.html
@@ -73,79 +73,68 @@
 	</nav>
 	<!-- 顶部banner -->
 	<div class="ty-banner">
-		<img class="banner-img" src="./images/new/bac-6.png" alt="">
-		<div class="">
-			<h2>职业发展</h2>
+		<img class="banner-img" src="./images/new/bac-2.png" alt="">
+		<div>
+			<h2>教学项目</h2>
 		</div>
-		<div class="nav-list bg-white"></div>
+		<div class="nav-list">
+			<span data-to="ty-jj">经济学</span>
+			<span data-to="ty-gl">管理学</span>
+		</div>
 	</div>
 
-	<!-- 就业指导 -->
-	<div class="ty-guidance">
-		<div class="main">
-			<div class="top">
-				<img src="./images/new/dev-1.png" alt="">
-				<div class="r">
-					<h4>职业发展中心</h4>
-					<p>职业发展中心（Career Development Center, CDC）是清华大学经济管理学院的职能部门，负责本院学生（MBA学生、本科生和硕士生）的职业指导工作，为用人单位提供招聘支持。
+	<div class="ty-jj">
+		<div class="title clearfix container">
+			<p>经济学</p>
+		</div>
+
+		<div class="project-pic">
+			<div class="in">
+				<img src="./images/new/project-1.png" alt="">
+				<div class="text">
+					<h3>培养目标</h3>
+					<p>中国的经济建设和科技发展急需大批具有扎实的本专业素质，同时又具备一定的经济学素养、包括现代经济学的理论功底和分析方法的高层次、复合型人才。经济学第二学位通过对非经济学专业的学生进行接近于经济学本专业本科生的系统而严格的培养，使学生对其专业领域及其他广泛领域的经济问题具有更加开阔的视野、深刻的思考和严谨的分析，为将来从事本专业与经济学有关的工作、或者其他与经济学相关的职业奠定基础。
 					</p>
-					<a class="ty-more-4" href=""><strong>查看更多</strong></a>
-				</div>
-			</div>
-			<div class="clearfix">
-				<div class="ty-recruit">
-					<h3 class="ty-title">招聘管理</h3>
-					<ul>
-						<li>
-							<p><span>1</span>在线招聘平台</p>
-						</li>
-						<li>
-							<p><span>2</span>校园招聘专场活动</p>
-						</li>
-						<li>
-							<p><span>3</span>校园集体招聘会</p>
-						</li>
-						<li>
-							<p><span>4</span>发布职位信息</p>
-						</li>
-						<li>
-							<p><span>5</span>推荐毕业生</p>
-						</li>
-					</ul>
-				</div>
-				<div class="ty-vocation">
-					<h3 class="ty-title">职业指导</h3>
-					<ul>
-						<li>
-							<p><span>1</span>全程职业发展指导</p>
-						</li>
-						<li>
-							<p><span>2</span>一对一职业咨询</p>
-						</li>
-						<li>
-							<p><span>3</span>求职能力训练</p>
-						</li>
-						<li>
-							<p><span>4</span>行业知识讲座</p>
-						</li>
-						<li>
-							<p><span>5</span>参观/座谈/分享/演讲等互动活动</p>
-						</li>
-					</ul>
-				</div>
-				<div class="ty-how-connect">
-					<h3 class="ty-title">联系方式</h3>
-					<ul>
-						<li> <i class="f-ifont">&#xe777;</i> 地址：清华大学经济管理学院舜德楼126</li>
-						<li> <i class="f-ifont">&#xe6f8;</i> 电话：+86-10-62781350/62797110</li>
-						<li> <i class="f-ifont">&#xe608;</i> 传真：+86-10-62781306</li>
-						<li> <i class="f-ifont">&#xe633;</i> 企业电邮：career@sem.tsinghua.edu.cn</li>
-						<li> <i class="f-ifont">&#xe625;</i> 学生电邮：cdc@sem.tsinghua.edu.cn</li>
-					</ul>
+					<p>2015年秋起开设金融方向，旨在培养具有经济学和金融学理论知识和分析框架、同时又具备解决现代经济及金融领域实际问题的具体方法和技能的复合型经济金融人才。</p>
 				</div>
 			</div>
 		</div>
+
+		<div class="list-project">
+			<ul>
+				<li><a href="">经济学 课程安排</a></li>
+				<li><a href="">金融方向 课程安排</a></li>
+			</ul>
+		</div>
 	</div>
+
+	<div class="ty-gl">
+		<div class="title clearfix container">
+			<p>管理学（工商管理专业）</p>
+		</div>
+
+		<div class="project-pic">
+			<div class="in">
+				<img src="./images/new/project-2.png" alt="">
+				<div class="text">
+					<h3>培养目标</h3>
+					<p>中国的经济建设和科技发展急需大批具有扎实的本专业素质，同时又具备一定的经济学素养、包括现代经济学的理论功底和分析方法的高层次、复合型人才。经济学第二学位通过对非经济学专业的学生进行接近于经济学本专业本科生的系统而严格的培养，使学生对其专业领域及其他广泛领域的经济问题具有更加开阔的视野、深刻的思考和严谨的分析，为将来从事本专业与经济学有关的工作、或者其他与经济学相关的职业奠定基础。
+					</p>
+					<p>2015年秋起开设金融方向，旨在培养具有经济学和金融学理论知识和分析框架、同时又具备解决现代经济及金融领域实际问题的具体方法和技能的复合型经济金融人才。</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="list-project">
+			<ul>
+				<li><a href="">管理学（工商管理专业<br >课程安排</a></li>
+				<li><a href="">创新创业领导力方向<br >课程安排</a></li>
+				<li><a href="">财务分析与控制方向<br >课程安排</a></li>
+				<li><a href="">商务数据科学方向<br >课程安排</a></li>
+			</ul>
+		</div>
+	</div>
+
 
 	<!-- 底部 -->
 	<footer>
