--- a/web-tsu2/index.html
+++ b/web-tsu2/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="address=no">
 	<title>清华经管学院</title>
@@ -59,10 +60,6 @@
 				<a href="about.html">关于我们</a>
 				<a href="practice.html">项目活动</a>
 				<a href="development.html">职业发展</a>
-				<a href="teachers.html">师资力量</a>
-				<a href="undergraduate.html">本科教学</a>
-				<a href="school.html">校园生活</a>
-				<a href="abort.html">国际合作</a>
 			</div>
 			<i class="f-ifont close for-mobile">&#xe62b;</i>
 			<div class="serach-div">
@@ -113,139 +110,69 @@
 		</div>
 	</section>
 
-	<!-- 学校生活 -->
-	<section class="school_life">
-		<div class="container">
-			<p class="ts-tit">校园生活</p>
-			<div class="school_life_list">
-				<a class="active" href="javascript:;">文体活动</a>
-				<a href="javascript:;">专业协会</a>
-				<a href="javascript:;">校园风华</a>
-			</div>
-			<!-- 1 -->
-			<div class="school_life_content">
-				<a href="" class="slc_txt fl clearfix">
-					<div class="left fl">
-						<span class="month">JAN</span>
-						<span class="day">25</span>
-					</div>
-					<p class="p1 three_cut">“一带一路模拟峰会”团日活动带来思想盛宴</p>
-					<p class="p2 three_cut">清华大学王希勤副校长，校团委副书记朱晓冬老师，经管学院党委学生工作组组长高峰老师、副组长郭朝晖老师，经74辅导员陈熠 晨，清华大学年度人物...</p>
-				</a>
-				<a href="" class="slc_txt fl clearfix">
-					<div class="left fl">
-						<span class="month">MAY</span>
-						<span class="day">31</span>
-					</div>
-					<p class="p1 three_cut">本科暑期实践支队：青海进程务工人员未随迁子女受教育现状调研</p>
-					<p class="p2 three_cut">在刚刚过去的这个夏天，一支由九名清华大学经管学院学生组成的支队踏上了前往青海的征程。</p>
-				</a>
-				<a href="" class="slc_txt fr clearfix">
-					<div class="left fl">
-						<span class="month">JUN</span>
-						<span class="day">08</span>
-					</div>
-					<p class="p1 three_cut">“一带一路模拟峰会”团日活动带来思想盛宴</p>
-					<p class="p2 three_cut">中英文双语国际新生学费交费系统是为国际学生（包括国际本科生、国际研究生和非学位项目学生）提供的中英线上学费交费系统，具备信息化、网络化、数字化的特征
-					</p>
-				</a>
-			</div>
-			<!-- 2 -->
-			<div class="school_life_content">
-				<a href="" class="slc_txt fl clearfix">
-					<div class="left fl">
-						<span class="month">JAN</span>
-						<span class="day">25</span>
-					</div>
-					<p class="p1 three_cut">本科暑期实践支队：青海进程务工人员未随迁子女受教育现状调研</p>
-					<p class="p2 three_cut">清华大学王希勤副校长，校团委副书记朱晓冬老师，经管学院党委学生工作组组长高峰老师、副组长郭朝晖老师，经74辅导员陈熠 晨，清华大学年度人物...</p>
-				</a>
-				<a href="" class="slc_txt fl clearfix">
-					<div class="left fl">
-						<span class="month">MAY</span>
-						<span class="day">31</span>
-					</div>
-					<p class="p1 three_cut">本科暑期实践支队：青海进程务工人员未随迁子女受教育现状调研</p>
-					<p class="p2 three_cut">在刚刚过去的这个夏天，一支由九名清华大学经管学院学生组成的支队踏上了前往青海的征程。</p>
-				</a>
-				<a href="" class="slc_txt fr clearfix">
-					<div class="left fl">
-						<span class="month">JUN</span>
-						<span class="day">08</span>
-					</div>
-					<p class="p1 three_cut">本科暑期实践支队：青海进程务工人员未随迁子女受教育现状调研</p>
-					<p class="p2 three_cut">中英文双语国际新生学费交费系统是为国际学生（包括国际本科生、国际研究生和非学位项目学生）提供的中英线上学费交费系统，具备信息化、网络化、数字化的特征
-					</p>
-				</a>
-			</div>
-			<!-- 3 -->
-			<div class="school_life_content">
-				<a href="" class="slc_txt fl clearfix">
-					<div class="left fl">
-						<span class="month">JAN</span>
-						<span class="day">25</span>
-					</div>
-					<p class="p1 three_cut">“一带一路模拟峰会”团日活动带来思想盛宴</p>
-					<p class="p2 three_cut">清华大学王希勤副校长，校团委副书记朱晓冬老师，经管学院党委学生工作组组长高峰老师、副组长郭朝晖老师，经74辅导员陈熠 晨，清华大学年度人物...</p>
-				</a>
-				<a href="" class="slc_txt fl clearfix">
-					<div class="left fl">
-						<span class="month">MAY</span>
-						<span class="day">31</span>
-					</div>
-					<p class="p1 three_cut">“一带一路模拟峰会”团日活动带来思想盛宴</p>
-					<p class="p2 three_cut">在刚刚过去的这个夏天，一支由九名清华大学经管学院学生组成的支队踏上了前往青海的征程。</p>
-				</a>
-				<a href="" class="slc_txt fr clearfix">
-					<div class="left fl">
-						<span class="month">JUN</span>
-						<span class="day">08</span>
-					</div>
-					<p class="p1 three_cut">“一带一路模拟峰会”团日活动带来思想盛宴</p>
-					<p class="p2 three_cut">中英文双语国际新生学费交费系统是为国际学生（包括国际本科生、国际研究生和非学位项目学生）提供的中英线上学费交费系统，具备信息化、网络化、数字化的特征
-					</p>
-				</a>
-			</div>
-			<div class="search">
-				<a href="javascript:;">查看所有的活动&nbsp;></a>
-			</div>
+	<section class="index-project">
+		<div class="title clearfix container">
+			<p>教学项目</p>
+			<p class="txt one_cut">departments</p>
 		</div>
+
+		<ul class="project-list">
+			<li>
+				<a href="">
+					<img src="./images/new/project-1.png" alt="">
+					<div class="in">
+						<h3>经济学</h3>
+						<h4>economics</h4>
+						<p>培养既掌握系统的经济学与金融学理论和分析方法，又具备解决现代经济特别是金融领域中实际问题的技能，既具有国际视野同时也了解中国国情的高素质复合型经济和金融人才。</p>
+					</div>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="./images/new/project-2.png" alt="">
+					<div class="in">
+						<h3>经济学</h3>
+						<h4>economics</h4>
+						<p>培养既掌握系统的经济学与金融学理论和分析方法，又具备解决现代经济特别是金融领域中实际问题的技能，既具有国际视野同时也了解中国国情的高素质复合型经济和金融人才。</p>
+					</div>
+				</a>
+			</li>
+		</ul>
 	</section>
+
 	<!-- 学生风采 -->
 	<section class="student_life">
 		<div class="title clearfix container">
-			<div id="student-left" class="left fl"></div>
-			<div id="student-right" class="right fr"></div>
-			<p>学生风采</p>
-			<p class="txt one_cut">在这里倾听经管学子里内心的声音。</p>
+			<p>项目活动</p>
+			<p class="txt one_cut">ACTIVITIES</p>
+			<a class="activity-more" href=""></a>
 		</div>
-		<div class="student_content container clearfix student-swiper-container">
+		<div class="student_content clearfix student-swiper-container">
 			<div class="swiper-wrapper">
 				<div class="student_min fl swiper-slide">
 					<a href="" class="in">
 						<img src="./images/new/index-4.png" alt="">
-						<i class="left"></i>
-						<i class="right"></i>
-						<p class="p1"> <span>夏劼斐</span>&nbsp;&nbsp;<span>2014级</span></p>
-						<p class="p2 three_cut">只有用行动热爱真真切切的生活本身，才能创造意义。</p>
+						<p class="p1">清华经管学院“院长下午茶”本科生专场活动在舜德楼116举行</p>
+						<p class="p2 four_cut">
+							2018年12月13日下午，清华经管学院“院长下午茶”本科生专场活动在舜德楼116举行。清华经管学院白重恩院长与60多位来自不同年级和专业的本科生进行了深入交流。作为白重恩院长履...
+						</p>
+						<img class="to" src="./images/right.png" alt="">
 					</a>
 				</div>
 				<div class="student_min fl swiper-slide">
 					<a href="" class="in">
 						<img src="./images/new/index-3.png" alt="">
-						<i class="left"></i>
-						<i class="right"></i>
-						<p class="p1"> <span>岳汉超</span>&nbsp;&nbsp;<span>2016级</span></p>
-						<p class="p2 three_cut">我不喜欢循规蹈矩地走商科学生的道路 ，而是更喜欢在时代浪潮下做有意义的和有创造力的事情。</p>
+						<p class="p1">清华经管学院“院长下午茶”本科生专场活动在舜德楼116举行</p>
+						<p class="p2 four_cut">我不喜欢循规蹈矩地走商科学生的道路 ，而是更喜欢在时代浪潮下做有意义的和有创造力的事情。</p>
+						<img class="to" src="./images/right.png" alt="">
 					</a>
 				</div>
 				<div class="student_min fl swiper-slide">
 					<a href="" class="in">
 						<img src="./images/new/index-5.png" alt="">
-						<i class="left"></i>
-						<i class="right"></i>
-						<p class="p1"> <span>张塞</span>&nbsp;&nbsp;<span>2014级</span></p>
-						<p class="p2 three_cut">多尝试，发现自己喜欢的，就朝着这个方向努力。过了高考这个坎，时间不是最重要的因素了，试错的时间是有价值的。</p>
+						<p class="p1">清华经管学院“院长下午茶”本科生专场活动在舜德楼116举行</p>
+						<p class="p2 four_cut">多尝试，发现自己喜欢的，就朝着这个方向努力。过了高考这个坎，时间不是最重要的因素了，试错的时间是有价值的。</p>
+						<img class="to" src="./images/right.png" alt="">
 					</a>
 				</div>
 			</div>
@@ -273,7 +200,8 @@
 				<div class="line_bottom"></div>
 				<p class="fl">版权所有：清华大学经济管理学院</p>
 				<p class="fr"><a href="javascript:;">网站地图&nbsp;&nbsp;</a>/<a
-						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
+						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a
+						href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
 			</div>
 		</div>
 	</footer>
