--- a/web-tsu2/development.html
+++ b/web-tsu2/development.html
@@ -89,7 +89,7 @@
 					<h4>职业发展中心</h4>
 					<p>职业发展中心（Career Development Center, CDC）是清华大学经济管理学院的职能部门，负责本院学生（MBA学生、本科生和硕士生）的职业指导工作，为用人单位提供招聘支持。
 					</p>
-					<a class="ty-more-4" href=""><strong>查看更多</strong></a>
+					<a class="ty-more" href="">进入职业发展中心网站</a>
 				</div>
 			</div>
 			<div class="clearfix">
