--- a/web-tsu2/newsList2.html
+++ b/web-tsu2/newsList2.html
@@ -55,19 +55,21 @@
 		<div class="nav_list">
 			<div class="in">
 				<div class="in">
-					<a class="active" href="index.html">首页</a>
+					<a href="index.html">首页</a>
 					<a href="project.html">教学项目</a>
 					<a href="apply.html">申报指南</a>
 					<a href="about.html">关于我们</a>
-					<a href="practice.html">项目活动</a>
+					<a class="active" href="practice.html">项目活动</a>
 					<a href="development.html">职业发展</a>
 				</div>
-				<form class="search-inp" action="">
-					<input type="text" value="" />
-					<i class="close f-ifont">&#xe643;</i>
-					<i class="search f-ifont">&#xe656;</i>
-				</form>
 				<i class="f-ifont close for-mobile">&#xe62b;</i>
+				<div class="serach-div">
+					<form class="search-inp" action="">
+						<input type="text" value="" />
+						<i class="close f-ifont">&#xe643;</i>
+						<i class="search f-ifont">&#xe656;</i>
+					</form>
+				</div>
 			</div>
 		</div>
 	</nav>
