--- a/web-tsu2/project.html
+++ b/web-tsu2/project.html
@@ -55,19 +55,21 @@
 		<div class="nav_list">
 			<div class="in">
 				<div class="in">
-					<a class="active" href="index.html">首页</a>
-					<a href="project.html">教学项目</a>
+					<a href="index.html">首页</a>
+					<a class="active" href="project.html">教学项目</a>
 					<a href="apply.html">申报指南</a>
 					<a href="about.html">关于我们</a>
 					<a href="practice.html">项目活动</a>
 					<a href="development.html">职业发展</a>
 				</div>
-				<form class="search-inp" action="">
-					<input type="text" value="" />
-					<i class="close f-ifont">&#xe643;</i>
-					<i class="search f-ifont">&#xe656;</i>
-				</form>
 				<i class="f-ifont close for-mobile">&#xe62b;</i>
+				<div class="serach-div">
+					<form class="search-inp" action="">
+						<input type="text" value="" />
+						<i class="close f-ifont">&#xe643;</i>
+						<i class="search f-ifont">&#xe656;</i>
+					</form>
+				</div>
 			</div>
 		</div>
 	</nav>
@@ -127,10 +129,10 @@
 
 		<div class="list-project">
 			<ul>
-				<li><a href="">管理学（工商管理专业<br >课程安排</a></li>
-				<li><a href="">创新创业领导力方向<br >课程安排</a></li>
-				<li><a href="">财务分析与控制方向<br >课程安排</a></li>
-				<li><a href="">商务数据科学方向<br >课程安排</a></li>
+				<li><a href="">管理学（工商管理专业<br>课程安排</a></li>
+				<li><a href="">创新创业领导力方向<br>课程安排</a></li>
+				<li><a href="">财务分析与控制方向<br>课程安排</a></li>
+				<li><a href="">商务数据科学方向<br>课程安排</a></li>
 			</ul>
 		</div>
 	</div>
