--- a/web-tsu2/newsList2.html
+++ b/web-tsu2/newsList2.html
@@ -76,7 +76,7 @@
 	<!-- 顶部banner -->
 	<div class="ty-banner news">
 		<div class="">
-			<h2 style="background: url(./images/aecond-top-bac2.png);">新闻中心</h2>
+			<h2 style="background-image: url(./images/aecond-top-bac2.png);">新闻中心</h2>
 			<p class="ty-crumbs">当前位置：<a href="">新闻中心</a><a href="">图片新闻</a></p>
 		</div>
 	</div>
